2008-12-07  Joe English  <jenglish@users.sourceforge.net>

	* macosx/ttkMacOSXTheme.c: Add native aqua elements for
	ttk::spinbox [Bug 2219588]
	* generic/ttk/ttkEntry.c, library/ttk/spinbox.tcl,
	tests/ttk/spinbox.test: Moved most spinbox "business logic"
	out of ttkEntry.c into Tcl bindings.
	* library/ttk/clamTheme.tcl: Minor spinbox appearance improvements.

2008-12-06  Donal K. Fellows  <dkf@users.sf.net>

	TIP #197 IMPLEMENTATION

	* generic/tkText.c (insertUnfocussedStrings, optionSpecs):
	* generic/tkText.h (TkText, TkTextInsertUnfocussed):
	* doc/text.n, tests/text.test:
	Added definitions/tests/docs for "-insertunfocussed" field.
	* generic/tkTextMark.c (TkTextInsertDisplayProc):
	* generic/tkText.c (TextBlinkProc):
	Added user-controlledrendering of insertion cursor when focus is not
	in the text widget.

2008-12-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/ttk.tcl:        Added vista theme to iron out the visual
	* library/ttk/vistaTheme.tcl: differences between vista and XP.
	* library/ttk/xpTheme.tcl:
	* win/ttkWinXPTheme.c:

2008-12-05  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkCanvPs.c (Tk_PostscriptFont): Ensure that font sizes can
	ever be negative; it triggers a really strange case that is definitely
	not what is wanted. [Bug 2107938]
	* library/mkpsenc.tcl: Corrected and improved generation of postscript
	* library/prolog.ps:  prolog. Removed prolog.ps, which wasn't used and
	was misleading.

2008-12-04  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.decls:	Move 10 functions from tkText.h to
	* generic/tkText.h:     stub table [Feature Request 220906]
	* generic/tkStubInit.c (regenerated)
	* generic/tkIntDecls.h (regenerated)

2008-12-04  Donal K. Fellows  <dkf@users.sf.net>

	* doc/ttk_button.n, doc/ttk_checkbutton.n, doc/ttk_menubutton.n: 
	* doc/ttk_radiobutton.n: Added mention of the Toolbutton style to all
	widgets that can sensibly make use of it.
